kube/ingress/bethany-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  namespace: bethany
spec:
  ingressClassName: bethany-nginx
  rules:
  - host: kapilkhubchandani.de
    http: 
      paths: 
        - path: /red
          pathType: Prefix
          backend:
            service:
              name: nginx
              port: 
                number: 80
        - path: /blue
          pathType: Exact
          backend:
            service:
              name: nginx
              port: 
                number: 80
